# fastbb

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
app/: crud.py  crypto.py  database.py  dependencies.py  environment.py  main.py  models.py  schemas.py
app/routers/: categories.py  posts.py  quotes.py  users.py
fastbb/: database.py  models.py
fastbb/routers/: categories.py  posts.py
src/fastbb/: crypto.py  dependencies.py  environment.py  fastbb.py
src/fastbb/routers/: users.py
