[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FastBB"
version = "0.0.1"
authors = [
    { name="Wesley Barros (wesley950)", email="wesleybarros950@gmail.com" }
]
description = "A simple bulletin board application made with FastAPI and React."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wesley950/fastbb"
"Bug Tracker" = "https://github.com/wesley950/fastbb/issues"